--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Run Your Run",
+  "name": "Run-A-Way",
   "version": "1.0.0",
   "main": "main.js",
   "engines": {
@@ -7,11 +7,11 @@
     "npm": "5.3.0"
   },
   "script": {
-    "start": "node main.js",
+    "start": "node main.js"
   },
   "author": "Caitlin and Bernard",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3",
+    "express": "^4.15.3"
   }
 }
